[package]
name = "mseed"
version = "0.6.0"
authors = ["Daniel Armbruster <dani.armbruster@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["miniseed", "seismology"]
repository = "https://github.com/damb/mseed"
documentation = "https://docs.rs/mseed"
description = """
Bindings to libmseed for interoperating with miniSEED records.
"""
categories = ["api-bindings"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmseed-sys = { path = "libmseed-sys", version="0.3.0"}

bitflags = "2.4.0"
num-traits = "0.2"
time = "0.3.20"
url = "2.4"
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "1"
time = { version = "0.3.20", features = ["parsing", "formatting"]}
clap = { version = "4.3.4", features = ["derive"] }

