[package]
name = "libmseed-sys"
version = "0.2.1+3.0.19"
authors = ["Daniel Armbruster <dani.armbruster@gmail.com>, Brian Savage <savage13@gmail.com>"]
links = "mseed"
build = "build.rs"
repository = "https://github.com/damb/mseed"
license = "Apache-2.0"
description = "Native bindings to the libmseed library"
exclude = [
  "vendor/doc/*",
  "vendor/example/*",
  "vendor/test/*",
]
categories = ["external-ffi-bindings"]
edition = "2021"

[lib]
name = "libmseed_sys"
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.69"
cc = { version = "1.0", features = ["parallel"] }

